adicione informações na página sobre mim

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       </header>
       <div class="container">
           <h2>Um pouco sobre mim</h2>
-          <p>Meu nome é [Seu Nome]. Eu sou um [sua ocupação] interessado em [seus interesses].</p>
-          <p>Eu gosto de [suas atividades favoritas] e estou interessado em aprender mais sobre [áreas de interesse].</p>
-          <p>Sinta-se à vontade para entrar em contato comigo através do meu e-mail: [seu e-mail].</p>
+          <p>Meu nome é [Carlos MMiguel]. Eu sou um [dev sênior] interessado em [desenvolvimento web].</p>
+          <p>Eu gosto de [fazer web sites para empresas de tecnologia nas horas vagas] e estou interessado em aprender mais sobre [um pouco sobre engenharia aeronáutica e sobre construção e arquitetura de aeronaves].</p>
+          <p>Sinta-se à vontade para entrar em contato comigo através do meu e-mail: [cmiguel.dev@gmail.com].</p>
       </div>
   </body>
 </html>
